--- a/package.json
+++ b/package.json
@@ -2,14 +2,6 @@
   "name": "fusion-starter",
   "private": true,
   "type": "module",
-  "pkg": {
-    "assets": [
-      "dist/spa/*"
-    ],
-    "scripts": [
-      "dist/server/**/*.js"
-    ]
-  },
   "scripts": {
     "dev": "vite",
     "build": "npm run build:client && npm run build:server",
@@ -17,16 +9,13 @@
     "build:server": "vite build --config vite.config.server.ts",
     "start": "node dist/server/node-build.mjs",
     "test": "vitest --run",
-    "format.fix": "prettier --write .",
+    "format:fix": "prettier --write .",
     "typecheck": "tsc"
   },
   "dependencies": {
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
-<<<<<<< HEAD
-=======
     "gsap": "^3.13.0",
->>>>>>> 5772a10b60312ea028f236f97fff3baf01d6df00
     "zod": "^3.25.76"
   },
   "devDependencies": {
