Fix package.json formatting and remove pkg config

--- a/package.json
+++ b/package.json
@@ -2,14 +2,6 @@
   "name": "fusion-starter",
   "private": true,
   "type": "module",
-  "pkg": {
-    "assets": [
-      "dist/spa/*"
-    ],
-    "scripts": [
-      "dist/server/**/*.js"
-    ]
-  },
   "scripts": {
     "dev": "vite",
     "build": "npm run build:client && npm run build:server",
@@ -17,12 +9,13 @@
     "build:server": "vite build --config vite.config.server.ts",
     "start": "node dist/server/node-build.mjs",
     "test": "vitest --run",
-    "format.fix": "prettier --write .",
+    "format:fix": "prettier --write .",
     "typecheck": "tsc"
   },
   "dependencies": {
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "gsap": "^3.13.0",
     "zod": "^3.25.76"
   },
   "devDependencies": {
@@ -98,6 +91,6 @@
     "vaul": "^1.1.2",
     "vite": "^7.1.2",
     "vitest": "^3.2.4"
-  },
-  "packageManager": "pnpm@10.14.0+sha512.ad27a79641b49c3e481a16a805baa71817a04bbe06a38d17e60e2eaee83f6a146c6a688125f5792e48dd5ba30e7da52a5cda4c3992b9ccf333f9ce223af84748"
+  }
 }
+
